[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
dependencies = [ "gmanka_yml==23.0.*", "pyrogram==2.0.*", "tgcrypto==1.2.*", "uvloop==0.17.*", "rich==13.4.*",]
name = "anarchy_bot"
version = "23.0.9"
description = "telegram bot that can add users to minecraft whitelist"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
[[project.authors]]
name = "gmanka"
email = "gmankab@gmail.com"

[project.urls]
Documentation = "https://t.me/gmanka"
"Bug Tracker" = "https://t.me/gmanka"
Homepage = "https://t.me/gmanka"
